--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
+/.gitattributes export-ignore
+/.gitignore export-ignore
 /.symfony.bundle.yaml export-ignore
 /phpunit.xml.dist export-ignore
 /tests export-ignore
-/.git* export-ignore
