[TwigComponent] Fix ux:icon & ux:map renders

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "sort-packages": true
     },
     "conflict": {
-        "symfony/flex": "<1.13"
+        "symfony/flex": "<1.13",
+        "symfony/ux-twig-component": "<2.21"
     },
     "extra": {
         "thanks": {
