--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.symfony.bundle.yaml export-ignore
+/doc export-ignore
 /phpunit.xml.dist export-ignore
 /tests export-ignore
